# RobotWars

./: CMakeLists.txt  README.md
include/: hello.h
src/: hello.cpp  main.cpp
src/audio/: CMakeLists.txt  README.md
src/audio/include/: AudioBackend.h  AudioDriver.h  Speaker.h
src/audio/src/: AudioDriver.cpp  Speaker.cpp
src/camera/: CMakeLists.txt  README.md
src/core/: Application.cpp  Application.h
src/movement/: CMakeLists.txt  README.md
src/movement/include/: Motor.h  MotorDriver.h
src/movement/src/: Motor.cpp  MotorDriver.cpp
tests/: CMakeLists.txt  test_audio.cpp
